fixed badges overflow

--- a/packages/@coorpacademy-components/src/molecule/course-section/style.css
+++ b/packages/@coorpacademy-components/src/molecule/course-section/style.css
@@ -19,7 +19,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 83%;
+    width: calc(100% - 175px);
 }
 
 .containerInfos {
